asteria/core/tests/errors/elaboration_errors/incorrect_kind_for_type_argument_in_constructor_term.asteriacore
data T where
   | MkT {a : Type} : Test$T()
   ;;

x : Test$T()
  = MkT(\(a : Type) -> a;)
  ;;
